# Ukraine_E2E_App

./: .gitignore  Dockerfile  HLS_segment.tif  README.md  count_pixels.py  download_hls.sh  extract_feature_vectors.py  mosaic_granule_bands.sh  organize_granules.py  pyproject.toml  segment_granules.ipynb  segment_granules.py  step3_mosaic_granule_bands.sh  step4_segment_grandules.py  step4_segment_granules.py  ukraine_sample.tif
archive_code/: extract_feature_vectors.py  segment_granules_sergii.py
